# PocketBMPlayer

./: CMakeLists.txt  Makefile  README.md
Source/: pdex.elf  pdxinfo
Source/assets/fonts/: Pico8-mono.fnt  font-rains-1x.fnt
src/: beat_machine.c  beat_machine.h  main.c  scale_manager.c  scale_manager.h
